--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -9,6 +9,7 @@
 <body>
     <ul>
         <li><a href="register">Register</a></li>
+        <li><a href="login">Login</a></li>
     </ul>
 </body>
 </html>
