--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>Home</title>
-</head>
-<body>
-    <ul>
-        <li><a href="register">Register</a></li>
-    </ul>
-</body>
-</html>
+  <head>
+      <meta charset='utf-8'>
+      <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+      <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+      <Link rel="SHORTCUT ICON" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.wikipedia.org%2Fwiki%2FUniversidade_Federal_de_S%25C3%25A3o_Paulo&psig=AOvVaw0bRARXm2j4hJyZv0-VbKtY&ust=1668108907513000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCNDmgYvsofsCFQAAAAAdAAAAABAD"/>
+      <style>
+      body {
+          background-color: #FFE184;
+      }
+    </style>
+      <title>Listando</title>
+  </head>
 
-<!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="False" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        {% if user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
-        </li>
-  
-        {% else %}
-  
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
-        </li>
-  
-        {% endif %}
-      </ul>
+  <body>
+
+    <div align="center">
+      <header>
+
+        <img src="img/capa.png">
+
+      </header>
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <ul class="navbar-nav mr-auto">
+          {% if user.is_authenticated %}
+          <div class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </div>
+          {% else %}
+          <div><a href="register">Registre-se</a></div>
+          <div class="nav-item">
+            <a class="nav-link" href="/login">Entrar</a>
+          </div>
+
+          {% endif %}
+        </ul>
+      </nav> 
+
     </div>
-  </nav>  
+  </body>
+
+</html>
