--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -6,13 +6,13 @@
 
 <!--Register--> 
 <div class="container py-5">
-	<h1>Register</h1>
+	<h1>Registre-se</h1>
 	<form method="POST">
 		{% csrf_token %}
 		{{ register_form|crispy }}                    
-		<button class="btn btn-primary" type="submit">Register</button>
+		<button class="btn btn-primary" type="submit">Registrar</button>
 	</form>
-	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
+	<p class="text-center">Se você já tem uma conta, <a href="/login">entre aqui</a>.</p>
 </div>
 
 {% endblock %}
